Fixed non-collapsing top-margin

--- a/Development/sass/home/_hero.scss
+++ b/Development/sass/home/_hero.scss
@@ -6,7 +6,8 @@
 	justify-content: center;
 	align-content: center;
 	min-height: 15rem;
-	margin: 2rem auto 6rem;
+	padding-top: 4rem;
+	margin: 0 auto 6rem;
 	color: $colour-brand;
 
 .heading {
